# Tushar-Agrawal-Website

./: .gitignore  BLOG_SETUP_GUIDE.md  COMPLETE_SETUP_SUMMARY.md  README.md  SEO_INDEXING_CHECKLIST.md  next.config.ts  package-lock.json  package.json  tsconfig.json
.github/: SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: indexnow.yml  qauth-ci.yml
app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.alt.txt  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
app/about/: page.tsx
app/admin/: page.tsx
app/blog/: blog-listing-client.tsx  opengraph-image.alt.txt  opengraph-image.tsx  page.tsx
app/llms-full.txt/: route.ts
app/podcast.xml/: route.ts
app/privacy/: page.tsx
app/qauth/: opengraph-image.alt.txt  page.tsx  qauth-client.tsx
app/quantum-shield/: page.tsx  quantum-shield-client.tsx  twitter-image.alt.txt  twitter-image.tsx
app/rss.xml/: route.ts
backend/: README.md  auth.py  config.py  create_blogs.py  database.py  main.py  models.py  schemas.py  start_backend.bat
backend/routers/: auth_router.py  blog_router.py
components/: theme-provider.tsx
components/quantum-shield/: AlgorithmBadge.tsx  CodePreview.tsx  FeatureCard.tsx  StatsCounter.tsx  WaitlistForm.tsx
components/ui/: ai-chat-fab.tsx  ai-chat-panel.tsx  animated-grid.tsx  aurora-background.tsx  blog-reader.tsx  card-hover-effect.tsx  contact-form.tsx  cookie-consent.tsx  cursor-glow.tsx  entity-tooltip.tsx  floating-particles.tsx  floating-shapes.tsx  footer.tsx  glow-background.tsx  gradient-orbs.tsx  hero-entities.tsx  hero-highlight.tsx  magnetic-element.tsx  moving-border.tsx  navbar.tsx  particle-network.tsx  post-discussion.tsx  project-card.tsx  shader-background.tsx  spotlight.tsx  text-generate-effect.tsx  text-scramble.tsx  theme-toggle.tsx  tilt-card.tsx  timeline.tsx
content/blog/: 5g-applications-developers-complete-guide-2026.md  6g-technology-complete-guide-developers-2026.md  ai-capabilities-2026-complete-guide.md  ai-ml-skills-backend-salary-premium-india-2026.md  ai-native-backend-architecture-2026.md  apache-kafka-event-streaming-deep-dive.md  apache-vs-nginx-web-server-comparison.md  ar-vr-development-getting-started-complete-guide-2026.md  async-long-running-apis-for-ai-agents.md  authentication-authorization-jwt-oauth-guide.md  aws-services-backend-developers-guide.md  backend-developer-roadmap-india-2026.md  backend-developer-salary-india-2026.md  backend-trends-2025-developer-guide.md  best-free-ai-search-engine-india-2026.md  building-backends-for-ai-agents-idempotency-retries-state.md  building-scalable-microservices-with-go-and-fastapi.md  c-rust-go-systems-programming-comparison.md  cloud-microservices-backend-skills-india-hiring-2026.md  core-web-vitals-backend-engineers-server-performance-2026.md  cryptographic-bill-of-materials-cbom-pqc-migration.md  database-connection-pooling-performance-guide.md  database-sharding-partitioning-advanced-guide.md  diy-quantum-processor-hardware-build-guide-2026.md  docker-kubernetes-deployment-guide.md  docker-tutorial-beginners-2026.md  edge-computing-explained-complete-guide-2026.md  event-driven-architecture-kafka.md  fastapi-interview-questions-indian-backend-roles-2026.md  fastapi-vs-django-python-framework-2026.md  fomoa-ai-complete-guide-features-2026.md  fomoa-ai-indian-government-schemes-benefits.md  fomoa-ai-indian-students-jee-neet-upsc-2026.md  fomoa-deep-research-multi-hop-ai.md  fomoa-ethical-web-crawling-api.md  fomoa-hindi-hinglish-ai-assistant.md  fomoa-openai-compatible-api-developers.md  fomoa-source-credibility-ranking-system.md  fomoa-startup-company-funding-search.md  fomoa-training-86k-samples-india-ai.md  (+58 more)
distribution/: README.md  linkedin-posts.md
distribution/devto/: building-backends-for-ai-agents-idempotency-retries-state.md  kafka-consumer-lag-2-million-debugging-war-story.md  llms-txt-generative-engine-optimization-developers-2026.md  redis-cache-stampede-p99-latency-war-story.md  technical-seo-nextjs-developers-complete-guide-2026.md
lib/: ambient-engine.ts  api.ts  audio-manifest.ts  blog-index.ts  blog.ts  chat-context.ts  markdown.ts  origin-guard.ts  seo.ts  types.ts
public/: humans.txt  llm.txt  llms.txt  robots.txt  site.webmanifest
public/.well-known/: security.txt
public/audio/: 5g-applications-developers-complete-guide-2026.srt  6g-technology-complete-guide-developers-2026.srt  ai-capabilities-2026-complete-guide.srt  ai-ml-skills-backend-salary-premium-india-2026.srt  ai-native-backend-architecture-2026.srt  apache-kafka-event-streaming-deep-dive.srt  apache-vs-nginx-web-server-comparison.srt  (+82 more)
quantum-shield/: COMPARISON.md  README.md
quantum-shield/python/: pyproject.toml
quantum-shield/python/quantum_shield/: __init__.py  cipher.py  errors.py  kdf.py  kem.py  sign.py
quantum-shield/python/tests/: test_quantum_shield.py
quantum-shield/qauth/rust/: Cargo.toml  README.md  clippy.toml  rustfmt.toml
quantum-shield/qauth/rust/benches/: qauth_benchmarks.rs
quantum-shield/qauth/rust/examples/: complete_flow.rs
quantum-shield/qauth/rust/fuzz/: Cargo.toml  README.md
quantum-shield/qauth/rust/fuzz/fuzz_targets/: fuzz_encryption.rs  fuzz_policy_evaluation.rs  fuzz_proof_validation.rs  fuzz_signature_verification.rs  fuzz_token_parsing.rs
quantum-shield/qauth/rust/src/: crypto.rs  error.rs  lib.rs  policy.rs  proof.rs  revocation.rs  token.rs  wasm.rs
quantum-shield/qauth/sdks/python/: README.md  pyproject.toml
quantum-shield/rust/: Cargo.toml
quantum-shield/rust/src/kdf/: mod.rs
quantum-shield/rust/src/kem/: hybrid.rs  x25519.rs
quantum-shield/rust/src/protocol/: handshake.rs
quantum-shield/rust/src/sign/: ml_dsa.rs
quantum-shield/rust/src/symmetric/: chacha.rs  mod.rs
quantum-shield/rust/src/utils/: mod.rs  serialize.rs
quantum-shield/rust/tests/: integration_tests.rs
quantum-shield/wasm-demo/: Cargo.toml
quantum-shield/wasm-demo/src/: lib.rs
scripts/: generate-audio.mjs  generate-blog.ts  make-crosspost.mjs  ping-search-engines.ts
(+87 files in other folders)
