[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "quantum-shield"
version = "0.1.0"
description = "Quantum-secure cryptographic library with hybrid post-quantum encryption"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Tushar Agrawal" }
]
keywords = ["cryptography", "post-quantum", "encryption", "security", "pqc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Security :: Cryptography",
]

[project.urls]
Homepage = "https://github.com/tushar-agrawal/quantum-shield"
Documentation = "https://github.com/tushar-agrawal/quantum-shield#readme"
Repository = "https://github.com/tushar-agrawal/quantum-shield"

[tool.maturin]
features = ["python"]
module-name = "quantum_shield"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
]
